--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,40 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*{
+    font-family: "Lato", sans-serif;
+}
+
+/* Chrome, Safari, Edge  */
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-track {
+    background: #121212;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: hsl(0, 0%, 35%);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: hsl(0, 0%, 45%);
+}
+
+/* Firefox */
+@-moz-document url-prefix() {
+    * {
+        scrollbar-width: thin;
+        scrollbar-color: hsl(0, 0%, 40%) #121212;
+    }
+}
+
+/* Microsoft Edge and Internet Explorer 10+ */
+body {
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+}
