--- a/client/src/components/SidebarBtn/sidebarBtn.css
+++ b/client/src/components/SidebarBtn/sidebarBtn.css
@@ -1,20 +1,19 @@
 .side-btn {
-    border: 1px solid white;
     background-color: transparent;
     padding-inline: 1rem;
-    padding-block: 0.4rem;
+    padding-block: 0.5rem;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     column-gap: 0.75rem;
     cursor: pointer;
+    border-radius: 10px;
 
     img{
         height: 1.25rem;
     }
 
     &:hover {
-        border: 1px solid white;
         background-color: rgb(192 132 252);
         color: black;
 
@@ -24,7 +23,6 @@
     }
 
     &.active {
-        border: 1px solid rgb(192 132 252);
         background-color: rgb(192 132 252);
         color: black;
 
